# Compiler

./: CMakeLists.txt  Code.txt  DFA.cpp  DFA.h  Grammar.txt  MinimizationTable.cpp  MinimizationTable.h  NFA.cpp  NFA.h  Node.cpp  Node.h  Output.txt  Parser.cpp  Parser.h  ParsingTable .cpp  ParsingTable.h  Phase1.cpp  Phase1.h  Phase2.cpp  Phase2.h  Token.txt  Transition.txt  Utilities.cpp  Utilities.h  main.cpp
